<resources>
    <string name="app_name_publish">Bars Diary</string>
    <string name="app_name_developing">Bars Diary (dev)</string>
    <string name="written_by_unit" translatable="false">written by ũŋit</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="custom_url">Custom URL</string>
    <string name="ellipsis" translatable="false">…</string>
    <string name="statistics">Statistics</string>
    <string name="diary">Diary</string>
    <string name="global">Global</string>
    <string name="marks">Marks</string>
    <string name="sign_in">Sign in</string>
    <string name="server_url">Region (Server)</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="server_list">Server List</string>
    <string name="pick_date">Pick Date</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="information">Information</string>
    <string name="child_s_choice">Child\'s choice</string>
    <string name="final_marks">Final marks</string>
    <string name="developer">Developer</string>
    <string name="https" translatable="false">https://</string>
    <string name="overview_marks">Overview Marks</string>
    <string name="open_marks">Open Marks</string>
    <string name="experimental">experimental</string>
    <string name="mail">Mail</string>
    <string name="birthdays">Birthdays</string>
    <string name="choose">Choose</string>
    <string name="unauthorized">Unauthorized</string>
    <string name="internal_error">Internal Error</string>
    <string name="no_internet">No Internet</string>
    <string name="unauthorized_error_text">Possible incorrect auth data was entered</string>
    <string name="finish_registration_error">Registration not finished</string>
    <string name="finish_registration_error_text">Please finish registering your account on the site (%s) and try again</string>
    <string name="internal_error_text">Unknown internal error</string>
    <string name="no_internet_error_text">Please connect to the internet</string>
    <string name="employees">Employees</string>
    <string name="clazz">Class</string>
    <string name="account">Account</string>
    <string name="vacation">Vacation</string>
    <string name="holiday">Holiday</string>
    <string name="weekend">Weekend</string>
    <string name="show">show</string>
    <string name="hide">hide</string>
    <string name="empty">Empty</string>
    <string name="in_box">In Box</string>
    <string name="out_box">Out Box</string>
    <string name="you_should_not_have_seen_it">You shouldn\'t have seen it</string>
    <string name="was_absent">Was absent</string>
    <string name="days_until_vacation">Days until vacation</string>
    <string name="average_grade">Average grade</string>
    <string name="logout_text">Are you sure you want to logout?</string>
    <string name="retry">retry</string>
    <string name="letter">Letter</string>
    <string name="about_application">About application</string>
    <string name="theme">Theme</string>
    <string name="sync_with_system_theme">Sync with the system theme</string>
    <string name="night_theme">Night theme</string>
    <string name="rate_app">Rate the application</string>
    <string name="client">Client</string>
    <string name="fast_auth">Fast authorization</string>
    <string name="fast_auth_description">Saving auth cookies between sessions</string>
    <string name="crash" translatable="false">Crash</string>
    <string name="clear_all" translatable="false">Clear all</string>
    <string name="fake_auth" translatable="false">Fake auth</string>
    <string name="error">Error</string>
    <string name="success">Success</string>
    <string name="developer_mode">Developer mode</string>
    <string name="request_timeout">Request timeout</string>
    <string name="seconds">seconds</string>
    <string name="request_timeout_description">Maximum request execution time to the server (changes will take effect after the application is restarted)</string>
    <string name="application">Application</string>
    <string name="error_dialog">Pop-up windows with errors</string>
    <string name="enable_chucker" translatable="false">Enable Chucker</string>
    <string name="enable_crashlytics" translatable="false">Enable Crashlytics</string>
    <string name="subject">Subject</string>
    <string name="button_to_text">Click to select recipient(s)</string>
    <string name="button_attach_text">Click to attach file</string>
    <string name="recipients">Recipients</string>
    <string name="recipient_type_pupil">Pupils</string>
    <string name="recipient_type_employee">Employees</string>
    <string name="recipient_type_parent">Parents</string>
    <string name="recipient_type_admin">Admins</string>
    <string name="channel_sending_message_name">Sending message</string>
    <string name="channel_sending_message_description">Show while sending a message</string>
    <string name="channel_sending_message_result_name">Result of sending message</string>
    <string name="channel_sending_message_result_description">Show result of sending message</string>
    <string name="choose_file">Choose a file</string>
    <string name="meetings">Parent meetings</string>
    <string name="class_hours">Class hours</string>
    <string name="events">Events</string>
    <string name="advert_board">Advert board</string>
    <string name="in_development">In development</string>
    <string name="message">Message</string>
    <string name="download_file">Download file</string>
    <string name="update_downloaded">An update has just been downloaded from Google Play</string>
    <string name="reload">RELOAD</string>
    <string name="download_protocol">Download protocol</string>
    <string name="ssl_handshake">SSL Handshake</string>
    <string name="set_correct_date">Set the current date on the device</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="for_next_lesson">For the next lesson</string>
</resources>