<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mvvm.fragment.MarksFragment">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/settings"
        android:textAppearance="@style/TextAppearance.Barsdiary.Title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_bold"
                android:paddingStart="10dp"
                android:paddingTop="12dp"
                android:paddingEnd="10dp"
                android:paddingBottom="12dp"
                android:text="@string/theme"
                android:textAppearance="@style/TextAppearance.Barsdiary.Large"
                android:textSize="20sp" />

            <Switch
                android:id="@+id/syncThemeSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingTop="12dp"
                android:paddingEnd="10dp"
                android:paddingBottom="12dp"
                android:switchPadding="10dp"
                android:text="@string/sync_with_system_theme"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

            <Switch
                android:id="@+id/nightThemeSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingTop="12dp"
                android:paddingEnd="10dp"
                android:paddingBottom="12dp"
                android:switchPadding="10dp"
                android:text="@string/night_theme"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_bold"
                android:paddingStart="10dp"
                android:paddingTop="12dp"
                android:paddingEnd="10dp"
                android:paddingBottom="12dp"
                android:text="@string/client"
                android:textAppearance="@style/TextAppearance.Barsdiary.Large"
                android:textSize="20sp" />

            <Switch
                android:id="@+id/fastAuthSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingTop="12dp"
                android:paddingEnd="10dp"
                android:paddingBottom="12dp"
                android:switchPadding="10dp"
                android:text="@string/fast_auth"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="12dp"
                android:text="@string/fast_auth_description"
                android:textAppearance="@style/TextAppearance.Barsdiary.Small"
                android:textSize="14sp" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
