<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.GlobalFragment">

    <ru.unit.barsdiary.ui.components.ImageButtonView
        android:id="@+id/sendButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewTitle"
        app:srcCompat="@drawable/ic_round_send_24" />

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/letter"
        android:textAppearance="@style/TextAppearance.Barsdiary.Title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle">

        <EditText
            android:id="@+id/editTextSubject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="16dp"
            android:fontFamily="@font/nunito_bold"
            android:hint="@string/subject"
            android:maxLines="2"
            android:padding="16dp"
            android:scrollbars="vertical"
            android:textAppearance="@style/TextAppearance.Barsdiary.Medium"
            app:drawableStartCompat="@drawable/ic_round_label_24" />

        <TextView
            android:id="@+id/textViewTo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:clickable="true"
            android:drawablePadding="16dp"
            android:ellipsize="end"
            android:fontFamily="@font/nunito"
            android:maxLines="2"
            android:padding="16dp"
            android:text="@string/button_to_text"
            android:textAppearance="@style/TextAppearance.Barsdiary.Medium"
            app:drawableStartCompat="@drawable/ic_round_people_alt_24" />

        <TextView
            android:id="@+id/textViewAttach"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:clickable="true"
            android:drawablePadding="16dp"
            android:ellipsize="end"
            android:fontFamily="@font/nunito"
            android:maxLines="2"
            android:padding="16dp"
            android:text="@string/button_attach_text"
            android:textAppearance="@style/TextAppearance.Barsdiary.Medium"
            app:drawableStartCompat="@drawable/ic_round_attach_file_24" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/nunito"
            android:inputType="textMultiLine"
            android:padding="16dp"
            android:scrollbars="vertical"
            android:textAppearance="@style/TextAppearance.Barsdiary.Medium" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
