<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.GlobalFragment">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toStartOf="@+id/refreshButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/global"
        android:textAppearance="@style/TextAppearance.Barsdiary.Title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ru.unit.barsdiary.ui.components.RefreshButtonView
        android:id="@+id/refreshButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewTitle" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle"
        app:srcCompat="@drawable/ic_round_public_24"
        app:tint="?attr/colorOnSecondary" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/textViewExperimental"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/tabMailLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="?selectableItemBackground"
                android:clickable="true">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="16dp"
                    android:fontFamily="@font/nunito_bold"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="14dp"
                    android:text="@string/mail"
                    android:textAppearance="@style/TextAppearance.Barsdiary.Medium"
                    android:textSize="18sp"
                    app:drawableStartCompat="@drawable/ic_round_mail_24" />

                <ru.unit.barsdiary.ui.components.CountView
                    android:id="@+id/tabMailCountView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginHorizontal="16dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/tabMeetingsLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="?selectableItemBackground"
                android:clickable="true">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="16dp"
                    android:fontFamily="@font/nunito_bold"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="14dp"
                    android:textAppearance="@style/TextAppearance.Barsdiary.Medium"
                    android:textSize="18sp"
                    android:text="@string/meetings"
                    app:drawableStartCompat="@drawable/ic_round_groups_24" />

                <ru.unit.barsdiary.ui.components.CountView
                    android:id="@+id/tabMeetingsCountView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginHorizontal="16dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/tabClassHoursLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="?selectableItemBackground"
                android:clickable="true">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="16dp"
                    android:fontFamily="@font/nunito_bold"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="14dp"
                    android:textAppearance="@style/TextAppearance.Barsdiary.Medium"
                    android:textSize="18sp"
                    android:text="@string/class_hours"
                    app:drawableStartCompat="@drawable/ic_round_access_time_filled_24" />

                <ru.unit.barsdiary.ui.components.CountView
                    android:id="@+id/tabClassHoursCountView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginHorizontal="16dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/tabEventsLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="?selectableItemBackground"
                android:clickable="true">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="16dp"
                    android:fontFamily="@font/nunito_bold"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="14dp"
                    android:textAppearance="@style/TextAppearance.Barsdiary.Medium"
                    android:textSize="18sp"
                    android:text="@string/events"
                    app:drawableStartCompat="@drawable/ic_round_event_24" />

                <ru.unit.barsdiary.ui.components.CountView
                    android:id="@+id/tabEventsCountView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginHorizontal="16dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/tabAdvertBoardLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="?selectableItemBackground"
                android:clickable="true">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="16dp"
                    android:fontFamily="@font/nunito_bold"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="14dp"
                    android:textAppearance="@style/TextAppearance.Barsdiary.Medium"
                    android:textSize="18sp"
                    android:text="@string/advert_board"
                    app:drawableStartCompat="@drawable/ic_round_assignment_24" />

                <ru.unit.barsdiary.ui.components.CountView
                    android:id="@+id/tabAdvertBoardCountView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginHorizontal="16dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/tabBirthdaysLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="?selectableItemBackground"
                android:clickable="true">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="16dp"
                    android:fontFamily="@font/nunito_bold"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="14dp"
                    android:textAppearance="@style/TextAppearance.Barsdiary.Medium"
                    android:textSize="18sp"
                    android:text="@string/birthdays"
                    app:drawableStartCompat="@drawable/ic_round_cake_24" />

                <ru.unit.barsdiary.ui.components.CountView
                    android:id="@+id/tabBirthdaysCountView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginHorizontal="16dp" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/textViewExperimental"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/nunito_extrabold"
        android:text="@string/experimental"
        android:textAppearance="@style/TextAppearance.Barsdiary.Small"
        android:textColor="?attr/colorPrimary"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
